Biker/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\Program Files (x86)\BlueJ\lib\bluejcore.jar;D:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;D:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;D:\Program Files (x86)\BlueJ\lib\lang-stride.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker
-d
D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\doc
-encoding
UTF-8
-charset
UTF-8
D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\Biker.java
<---- end of javadoc command ---->
Loading source file D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\Biker.java...
D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\Biker.java:26: error: unclosed string literal
        String ref = "Name: " + name + ", Wounds: " + bulletWounds + ", public String toString()
                                                                     ^
D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\Biker.java:27: error: unclosed string literal
    {"
     ^
D:\brugere\alan\Pictures\Skole\Uni\Programmering\Biker\Biker\Biker.java:29: error: reached end of file while parsing
}
 ^
3 errors
